--- a/speech-recognition/train_speech_recognition_model.ipynb
+++ b/speech-recognition/train_speech_recognition_model.ipynb
@@ -461,6 +461,61 @@
         "\n",
         "plot_confusion_matrix(cm, command_words)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Save the model to local\n"
+      ],
+      "metadata": {
+        "id": "1fRlWkJeDaS8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!zip -r trained_model.zip trained.model "
+      ],
+      "metadata": {
+        "id": "WF4W0O3MDZ08"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "validation_spectrogram = np.load('validation_spectrogram.npz')\n",
+        "X_validate = validation_spectrogram['X']\n",
+        "\n",
+        "converter2 = tf.lite.TFLiteConverter.from_saved_model(\"trained.model\")\n",
+        "converter2.optimizations = [tf.lite.Optimize.DEFAULT]\n",
+        "def representative_dataset_gen():\n",
+        "    for i in range(0, len(X_validate), 100):\n",
+        "        # Get sample input data as a numpy array in a method of your choosing.\n",
+        "        yield [X_validate[i:i+100]]\n",
+        "converter2.representative_dataset = representative_dataset_gen\n",
+        "converter2.target_spec.supported_ops = [tf.lite.OpsSet.TFLITE_BUILTINS_INT8]\n",
+        "tflite_quant_model = converter2.convert()\n",
+        "open(\"converted_model.tflite\", \"wb\").write(tflite_quant_model)"
+      ],
+      "metadata": {
+        "id": "EtQ1X3efEApO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!apt install xxd\n",
+        "!xxd -i converted_model.tflite > model_data.cc"
+      ],
+      "metadata": {
+        "id": "vl2YyR_zFRyq"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
