fix uncomment the unzip command

--- a/speech-recognition/process_command_traning_data.ipynb
+++ b/speech-recognition/process_command_traning_data.ipynb
@@ -68,7 +68,7 @@
       "cell_type": "code",
       "source": [
         "!mkdir speech_data\n",
-        "# !tar -xzf data_speech_commands_v0.02.tar.gz -C speech_data"
+        "!tar -xzf data_speech_commands_v0.02.tar.gz -C speech_data"
       ],
       "metadata": {
         "id": "YieU-j_3sSKu"
