hotfix: update file hosting path

--- a/speech-recognition/train_speech_recognition_model.ipynb
+++ b/speech-recognition/train_speech_recognition_model.ipynb
@@ -76,11 +76,12 @@
         "    fi\"\"\"\n",
         "    ! eval \"{COMMAND}\"\n",
         "\n",
-        "url_prefix = \"https://github.com/ntueecamp/22-software-workshop/releases/download/dataset/\"\n",
+        "url_prefix = \"https://github.com/ntueecamp/22-software-workshop/releases/download/v1.0.0/\"\n",
         "\n",
         "file_names = [\n",
-        "    \"training_spectrogram.npz.aa\",\n",
-        "    \"training_spectrogram.npz.ab\",\n",
+        "    \"training_spectrogram.npz.xaa\",\n",
+        "    \"training_spectrogram.npz.xab\",\n",
+        "    \"training_spectrogram.npz.xac\",\n",
         "    \"validation_spectrogram.npz\",\n",
         "    \"test_spectrogram.npz\"\n",
         "]\n",
@@ -92,7 +93,7 @@
         "then \\\n",
         "    echo \"training_spectrogram.npz already exists.\"; \\\n",
         "else \\\n",
-        "    cat training_spectrogram.npz.a* > training_spectrogram.npz; \\\n",
+        "    cat training_spectrogram.npz.xa* > training_spectrogram.npz; \\\n",
         "    echo \"done merging files\"; \\\n",
         "fi"
       ]
@@ -695,26 +696,31 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Save the model to local\n"
-      ],
       "metadata": {
         "id": "1fRlWkJeDaS8"
-      }
+      },
+      "source": [
+        "# Save the model to local\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!zip -r trained_model.zip trained.model "
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "WF4W0O3MDZ08"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!zip -r trained_model.zip trained.model "
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "EtQ1X3efEApO"
+      },
+      "outputs": [],
       "source": [
         "validation_spectrogram = np.load('validation_spectrogram.npz')\n",
         "X_validate = validation_spectrogram['X']\n",
@@ -729,24 +735,19 @@
         "converter2.target_spec.supported_ops = [tf.lite.OpsSet.TFLITE_BUILTINS_INT8]\n",
         "tflite_quant_model = converter2.convert()\n",
         "open(\"converted_model.tflite\", \"wb\").write(tflite_quant_model)"
-      ],
-      "metadata": {
-        "id": "EtQ1X3efEApO"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!apt install xxd\n",
-        "!xxd -i converted_model.tflite > model_data.cc"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "vl2YyR_zFRyq"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!apt install xxd\n",
+        "!xxd -i converted_model.tflite > model_data.cc"
+      ]
     }
   ],
   "metadata": {
